Just a z-index fixes

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -6,7 +6,7 @@
   height: 100%;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 10000;
+  z-index: 9998;
   padding:24px;
 }
 
